Synced config files automatically using shell script

--- a/hypr/hypr/hyprlock.conf
+++ b/hypr/hypr/hyprlock.conf
@@ -116,7 +116,7 @@ input-field {
     border_size = 3 
     border_color = #23535f
     check_color = rgb(204, 136, 34)
-    placeholder_text = <span foreground="#cdd6f4" font_family="JetBrains Mono">Input Password</span>
+    placeholder_text = <span font_family="JetBrains Mono">Input Password</span>
     hide_input = false
     position = 0, 0            # Centered position
     halign = center
