--- a/wofi/wofi/config
+++ b/wofi/wofi/config
@@ -1,18 +1,18 @@
-width=600
-height=350
+width=640
+height=360
 location=center
 show=drun
+matching=fuzzy
 prompt=Search...
 filter_rate=100
 allow_markup=true
 no_actions=true
-halign= fill
+halign=fill
 orientation=vertical
 content_halign=fill
 insensitive=true
 allow_images=true
-image_size=30
-gtk_dark=true
-font = "JetBrains Mono SemiBold"
-
-
+image_size=45
+gtk_dark=false
+term=kitty
+font=JetBrains Mono Semibold
