--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -46,7 +46,7 @@ general {
     gaps_in = 1 #5
     gaps_out = 5 #20
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(164, 138, 218, 1) 45deg
+    col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) 45deg
     #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
     col.inactive_border = rgba(595959aa)
 
