--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -12,7 +12,10 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once=obsidian #opens obsidian on start up
+windowrule = workspace 10, ^obsidian$
+windowrule = workspace 1, ^kitty$
+exec-once = kitty
+exec-once = obsidian
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
