--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -12,10 +12,11 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-windowrule = workspace 10, ^obsidian$
-windowrule = workspace 1, ^kitty$
+windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10 on startup similarly for the terminal as well as the browser
+windowrule = workspace 2, ^firefox$
 exec-once = kitty
 exec-once = obsidian
+exec-once = firefox
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -46,7 +47,7 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 1 #5
+    gaps_in = 2 #5
     gaps_out = 5 #20
     border_size = 2
     col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) 45deg
@@ -67,7 +68,7 @@ decoration {
     
     blur { 
         enabled = true
-        size = 3 #7
+        size = 7 #7
         passes = 2 #3
     }
 
