--- a/neofetch/neofetch/config.conf
+++ b/neofetch/neofetch/config.conf
@@ -1,41 +1,85 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
+# Neofetch Dot By Ryan https://github.com/0xl30/Neofetch-Config
 print_info() {
-    info title
-    info underline
+    prin
+ prin       "​${cl1}MemestaVedas"
+ prin "$(color 15)╔═════════════════════════════════════════════════╗"
+    # info " OS" distro
+    # info " Host" model
+    # info " Kernel" kernel
+    # info " Uptime" uptime
+    # info " Packages" packages
+    # info " Shell" shell
+    # info " Resolution" resolution
+    # info " DE" de
+    # info " WM" wm
+    # info " WM Theme" wm_theme
+    # info " Theme" theme
+    # info " Icons" icons
+    # info " Terminal" term
+    # info "ﯔ Terminal Font" term_font
+    # info " CPU" cpu
+    # info " GPU" gpu
+    # info " Memory" memory
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    info cols
+    # # info " GPU Driver" gpu_driver  # Linux/macOS only
+    # # info " CPU Usage" cpu_usage
+    # info " Disk" disk
+    # info " Battery" battery
+    # info " Font" font
+    # # info " Song" song
+    # # [[ "$player" ]] && prin "醙 Music Player" "$player"
+    # # info " Local IP" local_ip
+    # # info " Public IP" public_ip
+    # # info " Users" users
+    # # info " Locale" locale  # This only works on glibc systems.
+    info "${cl4} ╭─" distro
+    info "${cl4} ├─" kernel
+    # info "${cl2} ├─" users
+    info "${cl4} ├─" packages
+    # info "${cl2} ├─" uptime
+    info "${cl4} ├─" shell
+    #info "${cl4} ╭─" model
+    #info "${cl4} ├─" cpu
+    # info "${cl4} ├─" cpu_usage
+    #info "${cl4} ├─" gpu_driver
+    # info "${cl4} ├─" gpu_driver
+    # info "${cl4} ├─" resolution
+    info "${cl4} ├─" memory
+    # info "${cl4} ├─" battery
+    info "${cl4} ╰─" disk
+    prin
+    info "${cl7} ╭─" de
+    info "${cl7} ├─" wm
+    info "${cl7} ├─" term
+    info "${cl7} ├─" term_font
+    #info "${cl7} ├─" theme
+    info "${cl7} ╰─" theme
+    prin "$(color 15)╚═════════════════════════════════════════════════╝"
 }
+
+# Colors for custom colorblocks
+magenta="\033[1;35m"
+green="\033[1;32m"
+white="\033[1;37m"
+blue="\033[1;34m"
+red="\033[1;31m"
+black="\033[1;40;30m"
+yellow="\033[1;33m"
+cyan="\033[1;36m"
+reset="\033[0m"
+bgyellow="\033[1;43;33m"
+bgwhite="\033[1;47;37m"
+cl0="${reset}"
+cl1="${magenta}"
+cl2="${green}"
+cl3="${white}"
+cl4="${blue}"
+cl5="${red}"
+cl6="${yellow}"
+cl7="${cyan}"
+cl8="${black}"
+cl9="${bgyellow}"
+cl10="${bgwhite}"
 
 # Title
 
@@ -128,7 +172,7 @@ memory_percent="off"
 # kib  '1020928KiB / 7117824KiB'
 # mib  '1042MiB / 6951MiB'
 # gib: ' 0.98GiB / 6.79GiB'
-memory_unit="mib"
+memory_unit="gib"
 
 
 # Packages
@@ -195,7 +239,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -206,7 +250,7 @@ speed_shorthand="off"
 # Example:
 # on:   'Intel i7-6500U'
 # off:  'i7-6500U (4)'
-cpu_brand="on"
+cpu_brand="off"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -249,7 +293,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp="C"
 
 
 # GPU
@@ -283,7 +327,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="dedicated"
 
 
 # Resolution
@@ -411,7 +455,7 @@ disk_show=('/')
 # none:   'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
-disk_subtitle="mount"
+disk_subtitle="none"
 
 # Disk percent.
 # Show/Hide disk percent.
@@ -563,7 +607,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" "
 
 
 # Color Blocks
@@ -709,6 +753,7 @@ image_backend="kitty"
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
 image_source="/home/mv/randomshit/Untitled8_20241018020746.png"
+image_position="center"
 
 
 # Ascii Options
@@ -760,7 +805,7 @@ image_source="/home/mv/randomshit/Untitled8_20241018020746.png"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="Arch"
+ascii_distro="auto"
 
 # Ascii Colors
 #
@@ -771,7 +816,7 @@ ascii_distro="Arch"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(1 2 3 4 5 6)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -817,7 +862,7 @@ crop_mode="normal"
 # Values:   'northwest', 'north', 'northeast', 'west', 'center'
 #           'east', 'southwest', 'south', 'southeast'
 # Flag:     --crop_offset
-crop_offset="center"
+crop_offset="north"
 
 # Image size
 # The image is half the terminal width by default.
@@ -826,14 +871,14 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="380px"
 
 # Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=5
 
 # Image offsets
 # Only works with the w3m backend.
@@ -843,7 +888,7 @@ gap=3
 # Flags:   --xoffset
 #          --yoffset
 yoffset=0
-xoffset=0
+xoffset=2
 
 # Image background color
 # Only works with the w3m backend.
