--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -148,6 +148,7 @@ windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
 windowrulev2 = opacity 0.8 0.8,class:^(spotify)$
 windowrulev2 = opacity 1.0 0.8,class:^(Code)$
 windowrulev2 = opacity 1.0 0.8,class:^(obsidian)$
+#windowrulev2 = opacity 0.9 0.7, class:^(discord)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
