Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -14,6 +14,8 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 # Execute your favorite apps at launch
 windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10 on startup similarly for the terminal as well as the browser
 windowrule = workspace 2, ^firefox$
+windowrule = workspace 9, ^spotify$
+windowrule = workspace 8, ^discord$
 exec-once = kitty
 exec-once = obsidian
 exec-once = firefox
