--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -1,21 +1,14 @@
-#Setup monitors
-# See https://wiki.hyprland.org/Configuring/Monitors/
+#Setting up the monitors eDP-1 is the inbnuilt one and DP-1 is the external one
+#1980x1080@60 hertz is self explanatory and 1920x0, 1.0 is the scaling.
 monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10 on startup similarly for the terminal as well as the browser
-windowrule = workspace 2, ^firefox$
+# This is like bnding an app to a particular workspace
+windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
 windowrule = workspace 9, ^spotify$
 windowrule = workspace 8, ^discord$
+windowrule = workspace 2, ^firefox$
+
+#Startup files, all these are automatically opened on startup
 exec-once = kitty
 exec-once = obsidian
 exec-once = firefox
@@ -26,10 +19,10 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar && swaync
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
-# Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+# (Memesta): Ive left this untouched and its better if you do the same
 input {
     kb_layout = us
     kb_variant =
@@ -38,48 +31,44 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
+#natural scroll means that if youre used to scrolling up on windows or anywhere else it goes like that but if if the option is disabled it goes ulta
     touchpad {
         natural_scroll = yes #no
     }
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+#This will change the borders and how they look.
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 2 #5
     gaps_out = 5 #20
     border_size = 2
     col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) 45deg
     #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
     col.inactive_border = rgba(595959aa)
-
     layout = dwindle
 }
 
+#No idea what this does so google it lol
 misc {
     disable_hyprland_logo = no #yes
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 15
-    
     blur { 
         enabled = true
         size = 7 #7
         passes = 2 #3
     }
-
     drop_shadow = yes
     shadow_range = 4 #4
     shadow_render_power = 5 #3
     col.shadow = rgba(1a1a1aee)
 }
 
+#This is got it form r/unixporn and some i changed it to default
  animations {
     enabled = yes
     bezier = linear, 0.0, 0.0, 1.0, 1.0
