Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -4,9 +4,11 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 
 # This is like bnding an app to a particular workspace
 windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
-windowrule = workspace 9, ^spotify$
+windowrule = workspace 9, ^Spotify$
 windowrule = workspace 8, ^discord$
 windowrule = workspace 2, ^firefox$
+# Make sure that the name of the window matches with what youre writing here. 
+# ex spotify will now work but Spotify will be working properly
 
 #Startup files, all these are automatically opened on startup
 exec-once = kitty
@@ -41,9 +43,9 @@ input {
 #This will change the borders and how they look.
 general {
     gaps_in = 2 #5
-    gaps_out = 5 #20
-    border_size = 2
-    col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) 45deg
+    gaps_out = 3 #20
+    border_size = 0
+    col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) -45deg
     #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
     col.inactive_border = rgba(595959aa)
     layout = dwindle
@@ -56,7 +58,7 @@ misc {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 15
+    rounding = 10
     blur { 
         enabled = true
         size = 7 #7
@@ -74,19 +76,12 @@ decoration {
     bezier = linear, 0.0, 0.0, 1.0, 1.0
     bezier = mvBezier, 0.05, 0.9, 0.1, 1.05 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    
     bezier = overshot, 0.05, 0.9, 0.1, 1.1
-
     bezier = cubic, 0.54, 0.22, 0.07, 0.74
-
     bezier = overshotCircle, 0.175, 0.885, 0.32, 1.275
-
     bezier = md3_standard, 0.2, 0.0, 0, 1.0
-
     bezier= bounce, 1, 1.6, 0.1, 0.85
-
     bezier = decel, 0.05, 0.7, 0.1, 1
-
     animation = windowsIn, 1, 3, cubic
     animation = windowsOut, 1, 7, bounce, slide
     animation = windows, 1, 2, md3_standard, slide
@@ -95,9 +90,6 @@ decoration {
     animation = fade, 1, 1, default
     animation = workspaces, 1, 4, decel, slidefadevert
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-#   
-
     #animation = windows, 1, 7, linear,overshot
 #    animation = windowsOut, 1, 7, default, popin 80%
  #   animation = border, 1, 10, default
