--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -6,14 +6,14 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
 windowrule = workspace 9, ^Spotify$
 windowrule = workspace 8, ^discord$
-windowrule = workspace 2, ^firefox$
+windowrule = workspace 2, ^zen-browser$
 # Make sure that the name of the window matches with what youre writing here. 
 # ex spotify will now work but Spotify will be working properly
 
 #Startup files, all these are automatically opened on startup
 exec-once = kitty
 exec-once = obsidian
-exec-once = firefox
+exec-once = zen-browser
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -155,6 +155,7 @@ bind = $mainMod, Y, exec, spotify
 bind = $mainMod, X, exec, hyprpicker -a
 bind = $mainMod, D, exec, discord
 bind = $mainMod, N, exec, swaync-client -t -sw
+bind = $mainMod, Z, exec,zen-browser
 
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
