Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -9,16 +9,16 @@ windowrule = workspace 8, ^discord$
 windowrule = workspace 2, ^zen-browser$
 # Make sure that the name of the window matches with what youre writing here. 
 # ex spotify will now work but Spotify will be working properly
-
+$BROWSER = zen-browser
 #Startup files, all these are automatically opened on startup
 exec-once = kitty
 exec-once = obsidian
-exec-once = zen-browser
+exec-once = $BROWSER
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar && swaync
+exec-once = ags
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
 # source = ~/.config/hypr/myColors.conf
@@ -43,7 +43,7 @@ input {
 #This will change the borders and how they look.
 general {
     gaps_in = 2 #5
-    gaps_out = 3 #20
+    gaps_out = 2 #20
     border_size = 0
     col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) -45deg
     #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
