Synced config files automatically using shell script

--- a/hypr/hypr/hyprlock.conf
+++ b/hypr/hypr/hyprlock.conf
@@ -24,11 +24,11 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(date +"%A, %B %d ")"
     color = rgba(37,43,75,1)
-    font_size = 50
+    font_size = 60
     font_family = steelfish bold
-    position = 80, -270
+    position = 80, 420
     halign = left
-    valign = center
+    valign = botoom
 }
 
 # TIME
@@ -36,9 +36,9 @@ label {
   monitor = 
   text = cmd[update:1000] echo "$(date +"%-I:%M")"
   color = rgba(0,0,0,0.8)
-  font_size = 180
+  font_size = 190
   font_family = steelfish outline regular
-  position = 80, -120
+  position = 80, 100
   halign = left
   valign = center
 }
@@ -47,12 +47,12 @@ label {
 image {
     monitor =
     path = /home/mv/randomshit/Untitled8_20241018020746.png
-    size = 75
+    size = 50
     border_size = 0
     border_color = $foreground
-    position = -50, 50
-    halign = right
-    valign = bottom
+    position = 20, -20
+    halign = left
+    valign = top
     rounding=0
 }
 
@@ -61,24 +61,38 @@ label {
       monitor =
       text = cmd[update:1000] echo "$(/home/mv/whatsong.sh)"  
       font_size = 20
-      font_family = JetBrains Mono
+      font_family = SF Pro Bold
       color = rgba(48, 44, 62, 1)
-      position = 80, 180 # Shifted position to the right side
+      position = 280, 240 # Shifted position to the right side
+      halign = left      # Aligns the label to the right
+      valign = bottom
+    }
+label {
+      monitor =
+      text = cmd[update:1000] echo "$(/home/mv/artist.sh)"  
+      font_size = 20
+      font_family = SF Pro Display
+      color = rgba(48, 44, 62, 1)
+      position = 280, 200 # Shifted position to the right side
       halign = left      # Aligns the label to the right
       valign = bottom
     }
 
-
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/whoami.sh)"
-    color = $foreground
-    font_size = 14
-    font_family = JetBrains Mono
-    position = 0, -10
-    halign = center
-    valign = top
+image {
+    monitor = 
+    size = 192 # lesser side if not 1:1 ratio
+    rounding = 15 # negative values mean circle
+    border_size = 0
+    border_color =  rgb(133, 180, 234)
+    rotate = 0 # degrees, counter-clockwise
+    reload_time = 2
+    reload_cmd = ~/.config/hypr/scripts/art.sh
+    position = 80, 200
+    halign = left
+    valign = bottom
+    opacity = 1
 }
+
 
 label {
     monitor =
@@ -118,9 +132,9 @@ input-field {
     check_color = rgb(204, 136, 34)
     placeholder_text = <span font_family="JetBrains Mono">Input Password</span>
     hide_input = false
-    position = 0, 0            # Centered position
-    halign = center
-    valign = center
+    position = -80, 230            # Centered position
+    halign = right
+    valign = bottom
     shadow_passes = 1
     shadow_size = 2
 }
