--- a/hypr/hypr/hyprlock.conf
+++ b/hypr/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # BACKGROUND
 background {
     monitor =
-    path = /home/mv/randomshit/lock.png
+    path = /home/mv/randomshit/guiping.jpg
     blur_passes = 0.5
     contrast = 0.2
     brightness = 1
@@ -24,11 +24,11 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(date +"%A, %B %d ")"
     color = rgba(37,43,75,1)
-    font_size = 60
+    font_size = 50
     font_family = steelfish bold
-    position = 80, 420
+    position = 80, -270
     halign = left
-    valign = botoom
+    valign = center
 }
 
 # TIME
@@ -36,9 +36,9 @@ label {
   monitor = 
   text = cmd[update:1000] echo "$(date +"%-I:%M")"
   color = rgba(0,0,0,0.8)
-  font_size = 190
+  font_size = 180
   font_family = steelfish outline regular
-  position = 80, 100
+  position = 80, -120
   halign = left
   valign = center
 }
@@ -47,12 +47,12 @@ label {
 image {
     monitor =
     path = /home/mv/randomshit/Untitled8_20241018020746.png
-    size = 50
+    size = 75
     border_size = 0
     border_color = $foreground
-    position = 20, -20
-    halign = left
-    valign = top
+    position = -50, 50
+    halign = right
+    valign = bottom
     rounding=0
 }
 
@@ -61,9 +61,9 @@ label {
       monitor =
       text = cmd[update:1000] echo "$(/home/mv/whatsong.sh)"  
       font_size = 20
-      font_family = SF Pro Bold
+      font_family = JetBrains Mono
       color = rgba(48, 44, 62, 1)
-      position = 280, 240 # Shifted position to the right side
+      position = 80, 180 # Shifted position to the right side
       halign = left      # Aligns the label to the right
       valign = bottom
     }
@@ -71,28 +71,36 @@ label {
       monitor =
       text = cmd[update:1000] echo "$(/home/mv/artist.sh)"  
       font_size = 20
-      font_family = SF Pro Display
+      font_family = JetBrains Mono
       color = rgba(48, 44, 62, 1)
-      position = 280, 200 # Shifted position to the right side
+      position = 80, 80 # Shifted position to the right side
       halign = left      # Aligns the label to the right
       valign = bottom
     }
-
 image {
     monitor = 
     size = 192 # lesser side if not 1:1 ratio
-    rounding = 15 # negative values mean circle
+    rounding = 6 # negative values mean circle
     border_size = 0
     border_color =  rgb(133, 180, 234)
-    rotate = 0 # degrees, counter-clockwise
     reload_time = 2
     reload_cmd = ~/.config/hypr/scripts/art.sh
-    position = 80, 200
-    halign = left
-    valign = bottom
+    position = 0, -25
+    halign = center
+    valign = center
     opacity = 1
 }
 
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/whoami.sh)"
+    color = $foreground
+    font_size = 14
+    font_family = JetBrains Mono
+    position = 0, -10
+    halign = center
+    valign = top
+}
 
 label {
     monitor =
@@ -132,9 +140,9 @@ input-field {
     check_color = rgb(204, 136, 34)
     placeholder_text = <span font_family="JetBrains Mono">Input Password</span>
     hide_input = false
-    position = -80, 230            # Centered position
-    halign = right
-    valign = bottom
+    position = 0, 0            # Centered position
+    halign = center
+    valign = center
     shadow_passes = 1
     shadow_size = 2
 }
