--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -18,7 +18,7 @@ exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = ags
+exec-once = waybar
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
 # source = ~/.config/hypr/myColors.conf
@@ -153,6 +153,7 @@ bind = $mainMod, X, exec, hyprpicker -a
 bind = $mainMod, D, exec, discord
 bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, Z, exec,zen-browser
+bind = $mainMod, S, exec, hyprshot -m output
 
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
@@ -166,6 +167,7 @@ bind = ,233, exec, brightnessctl set 10%+ # Screen brightness up FN+F8
 bind = ,237, exec, brightnessctl -d asus::kbd_backlight set 33%- # Keyboard brightness down FN+F2
 bind = ,238, exec, brightnessctl -d asus::kbd_backlight set 33%+ # Keyboard brightnes up FN+F3
 bind = ,210, exec, asusctl led-mode -n # Switch keyboard RGB profile FN+F4
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
