Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -6,7 +6,7 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
 windowrule = workspace 9, ^Spotify$
 windowrule = workspace 8, ^discord$
-windowrule = workspace 2, ^zen-browser$
+windowrule = workspace 2, ^$BROWSER$
 # Make sure that the name of the window matches with what youre writing here. 
 # ex spotify will now work but Spotify will be working properly
 $BROWSER = zen-browser
@@ -43,7 +43,7 @@ input {
 #This will change the borders and how they look.
 general {
     gaps_in = 2 #5
-    gaps_out = 2 #20
+    gaps_out = 4 #20
     border_size = 0
     col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) -45deg
     #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
@@ -134,27 +134,35 @@ windowrulev2 = opacity 1.0 0.8,class:^(obsidian)$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty #open the terminal
 bind = $mainMod, C, killactive, # close the active window
 bind = $mainMod, L, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
-bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, thunar # Show the graphical file browser
-bind = $mainMod, V, togglefloating, # Allow a window to float
+bind = $mainMod, R, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, S, exec, hyprshot -m region # take a screenshot
 bind = $mainMod, O, exec, obsidian  #open obsidian
+bind = $mainMod, X, exec, hyprpicker -a
+bind = $mainMod, N, exec, swaync-client -t -sw
+bind = $mainMod, S, exec, hyprshot -m output
+
+# APP BINDS
+bind = $mainMod, Q, exec, kitty #open the terminal
+bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, F, exec, firefox  #open firefox
 bind = $mainMod, B, exec, brave  #open brave
 bind = $mainMod, Y, exec, spotify
-bind = $mainMod, X, exec, hyprpicker -a
-bind = $mainMod, D, exec, discord
-bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, Z, exec,zen-browser
-bind = $mainMod, S, exec, hyprshot -m output
+bind = $mainMod, Z, exec,zen-browser
+bind = $mainMod, V, exec, code
+bind = $mainMod, D, exec, discord
 
+# SHIFT BINDS
+bind = $mainMod SHIFT, S, exec, hyprshot -m region # take a screenshot
+bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = $mainMod SHIFT, N, exec, playerctl next # Play the next scrolling
+bind = $mainMod SHIFT, P, exec, playerctl previous # Play the previous song
+bind = $mainMod SHIFT, SPACE, exec, playerctl play-pause # Play or pause the song
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
 bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
