--- a/hypr/hypr/hyprlock.conf
+++ b/hypr/hypr/hyprlock.conf
@@ -115,7 +115,7 @@ image {
     valign = bottom
     opacity = 1
 }
-
+# BATTERY AND NETWORK STATUS--------------------------------------------------------------------------------------------------------
 label {
     monitor =
     text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/battery.sh)"
@@ -137,21 +137,18 @@ label {
     halign = right
     valign = top
 }
-
 # Profile Picture
-#image {
+# image {
 #     monitor =
-#    path = /home/mv/randomshit/miku3-removebg-preview.png
-#    size = 300
-#    border_size = 0
- #   border_color = $foreground
- #   position = -80, -40
- #   halign = right
- #   valign = center
- #   rounding=20
-  #  shadow_color = rgba(0, 0, 0, 0.5)  # Shadow color with transparency
-#    shadow_passes=1                  # Blur radius for the shadow
- #   shadow_size = 1              # Horizontal and vertical offset
-#}
-
-
+#     path = /home/mv/randomshit/miku3-removebg-preview.png
+#     size = 300
+#     border_size = 0
+#     border_color = $foreground
+#     position = -80, -40
+#     halign = right
+#     valign = center
+#     rounding = 20
+#     shadow_color = rgba(0, 0, 0, 0.5)  # Shadow color with transparency
+#     shadow_passes = 1                  # Blur radius for the shadow
+#     shadow_size = 1                    # Horizontal and vertical offset
+# }
