--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -2,11 +2,6 @@
 #1980x1080@60 hertz is self explanatory and 1920x0, 1.0 is the scaling.
 monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 
-# This is like bnding an app to a particular workspace
-windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
-windowrule = workspace 9, ^Spotify$
-windowrule = workspace 8, ^discord$
-windowrule = workspace 2, ^$BROWSER$
 # Make sure that the name of the window matches with what youre writing here. 
 # ex spotify will now work but Spotify will be working properly
 $BROWSER = zen-browser
@@ -128,8 +123,15 @@ windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
 windowrulev2 = opacity 0.8 0.8,class:^(spotify)$
 windowrulev2 = opacity 1.0 0.8,class:^(Code)$
 windowrulev2 = opacity 1.0 0.8,class:^(obsidian)$
-#windowrulev2 = opacity 0.9 0.7, class:^(discord)$
+windowrulev2 = opacity 1.0 0.8, class:^(discord)$
 
+
+# This is like bnding an app to a particular workspace
+windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
+windowrule = workspace 9, ^Spotify$
+windowrule = workspace 8, ^discord$
+windowrule = workspace 2, ^$BROWSER$
+windowrule = workspace 3, ^Code$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -145,7 +147,6 @@ bind = $mainMod, O, exec, obsidian  #open obsidian
 bind = $mainMod, X, exec, hyprpicker -a
 bind = $mainMod, N, exec, swaync-client -t -sw
 bind = $mainMod, S, exec, hyprshot -m output
-
 # APP BINDS
 bind = $mainMod, Q, exec, kitty #open the terminal
 bind = $mainMod, E, exec, thunar # Show the graphical file browser
@@ -163,6 +164,7 @@ bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hypr
 bind = $mainMod SHIFT, N, exec, playerctl next # Play the next scrolling
 bind = $mainMod SHIFT, P, exec, playerctl previous # Play the previous song
 bind = $mainMod SHIFT, SPACE, exec, playerctl play-pause # Play or pause the song
+
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
 bind = ,211, exec, asusctl profile -n; pkill -SIGRTMIN+8 waybar # Fan Profile key switch between power profiles
