Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -6,6 +6,7 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 # ex spotify will now work but Spotify will be working properly
 $BROWSER = zen-browser
 #Startup files, all these are automatically opened on startup
+exec-once = sudo adb start-server
 exec-once = kitty
 exec-once = obsidian
 exec-once = $BROWSER
@@ -13,7 +14,7 @@ exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar
+exec-once = agsv1
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
 # source = ~/.config/hypr/myColors.conf
