--- a/ags/themes/catppuccin_frappe.json
+++ b/ags/themes/catppuccin_frappe.json
@@ -344,5 +344,15 @@
   "theme.bar.buttons.systray.customIcon": "#c6d0f5",
   "theme.bar.border.color": "#babbf1",
   "theme.bar.menus.menu.media.timestamp": "#c6d0f5",
-  "theme.bar.buttons.borderColor": "#babbf1"
+  "theme.bar.buttons.borderColor": "#babbf1",
+  "theme.bar.buttons.modules.hyprsunset.icon": "#e5c890",
+  "theme.bar.buttons.modules.hyprsunset.background": "#303446",
+  "theme.bar.buttons.modules.hyprsunset.icon_background": "#e5c890",
+  "theme.bar.buttons.modules.hyprsunset.text": "#e5c890",
+  "theme.bar.buttons.modules.hyprsunset.border": "#e5c890",
+  "theme.bar.buttons.modules.hypridle.icon": "#e78284",
+  "theme.bar.buttons.modules.hypridle.background": "#303446",
+  "theme.bar.buttons.modules.hypridle.icon_background": "#e78284",
+  "theme.bar.buttons.modules.hypridle.text": "#e78284",
+  "theme.bar.buttons.modules.hypridle.border": "#e78284"
 }
