Synced config files automatically using shell script

--- a/hypr/hypr/hyprpaper.conf
+++ b/hypr/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/randomshit/shizuku.png
-wallpaper = eDP-1,~/randomshit/shizuku.png
+preload = ~/randomshit/clitloli.png
+wallpaper = eDP-1,/home/mv/randomshit/clitloli.png
