--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -14,8 +14,8 @@ exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = agsv1
-exec-once = hyprpaper
+exec-once = waybar
+exec-once = hyprctl hyprpaper wallpaper "eDP-1,/home/mv/randomshit/clitloli.png"
 exec-once = systemctl --user start hyprpolkitagent
 # source = ~/.config/hypr/myColors.conf
 
@@ -39,11 +39,11 @@ input {
 #This will change the borders and how they look.
 general {
     gaps_in = 2 #5
-    gaps_out = 4 #20
-    border_size = 0
-    col.active_border = rgba(255, 197, 251, 1) rgba(164, 138, 218, 1) -45deg
-    #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
-    col.inactive_border = rgba(595959aa)
+    gaps_out = 5 #20
+    border_size = 2
+    col.active_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1) -45deg
+    col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
+    col.inactive_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1) -45deg
     layout = dwindle
 }
 
@@ -54,7 +54,7 @@ misc {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    rounding = 10
+    rounding = 15
     blur { 
         enabled = true
         size = 7 #7
@@ -125,7 +125,7 @@ windowrulev2 = opacity 0.8 0.8,class:^(spotify)$
 windowrulev2 = opacity 1.0 0.8,class:^(Code)$
 windowrulev2 = opacity 1.0 0.8,class:^(obsidian)$
 windowrulev2 = opacity 1.0 0.8, class:^(discord)$
-
+windowrulev2 = opacity 0.9 0.8, class:^(thunar)$
 
 # This is like bnding an app to a particular workspace
 windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
