Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 
 # Make sure that the name of the window matches with what youre writing here. 
 # ex spotify will now work but Spotify will be working properly
-$BROWSER = zen-browser
+$BROWSER = zen-twilight
 #Startup files, all these are automatically opened on startup
 exec-once = sudo adb start-server
 exec-once = kitty
@@ -155,7 +155,7 @@ bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, F, exec, firefox  #open firefox
 bind = $mainMod, B, exec, brave  #open brave
 bind = $mainMod, Y, exec, spotify
-bind = $mainMod, Z, exec,zen-browser
+bind = $mainMod, Z, exec,zen-twilight
 bind = $mainMod, Z, exec,zen-browser
 bind = $mainMod, V, exec, code
 bind = $mainMod, D, exec, discord
