--- a/hypr/hypr/hyprpaper.conf
+++ b/hypr/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/randomshit/clitloli.png
-wallpaper = eDP-1,/home/mv/randomshit/clitloli.png
+preload = ~/randomshit/citlali.png
+wallpaper = eDP-1,/home/mv/randomshit/citlali.png
