Synced config files automatically using shell script

--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -41,9 +41,9 @@ general {
     gaps_in = 2 #5
     gaps_out = 5 #20
     border_size = 2
-    col.active_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1) -45deg
+    #col.active_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1)
     col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
-    col.inactive_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1) -45deg
+    #col.inactive_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1)
     layout = dwindle
 }
 
