--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,15 +1,38 @@
 # BACKGROUND
 background {
     monitor =
-    path = /home/mv/randomshit/lock.png
-    blur_passes = 0.5
+    path = /home/mv/randomshit/Fu.Hua.full.2858613.jpg
+    blur_passes = 0
     contrast = 0.2
     brightness = 1
     vibrancy = 1
     vibrancy_darkness = 0.2
     region = right_half  # (If your compositor supports it)
 }
-
+#INPUT FIELD FOR THE PASSWORD---------------------------------------------------------------------------------------------
+input-field {
+    monitor =
+    size = 300, 60
+    outline_thickness = 3
+    dots_size = 0.2
+    dots_spacing = 0.35
+    dots_center = true
+    outer_color = rgba(255,255,255,1)
+    inner_color = rgba(105,109,151,0.7)
+    font_color = #23535f
+    fade_on_empty = true       # Fade input field when empty
+    rounding = 0.05
+    border_size = 3 
+    border_color = #23535f
+    check_color = rgb(204, 136, 34)
+    placeholder_text = <span font_family="JetBrains Mono">Input Password</span>
+    hide_input = false
+    position = 30, -200            # Centered position
+    halign = left
+    valign = center
+    shadow_passes = 1
+    shadow_size = 2
+}
 # GENERAL
 general {
     no_fade_in = true
@@ -18,68 +41,81 @@ general {
     grace = 0
     disable_loading_bar = true
 }
-
+#DATE AND TIME--------------------------------------------------------------------------------------------------------------------------
 # DATE
 label {
     monitor =
     text = cmd[update:1000] echo "$(date +"%A, %B %d ")"
-    color = rgba(37,43,75,1)
-    font_size = 50
+    color = rgba(13, 18, 50, 1)
+    font_size = 45
     font_family = steelfish bold
-    position = 80, -270
+    position = 475, 145
     halign = left
-    valign = center
+    valign =bottom
 }
-
 # TIME
 label {
   monitor = 
   text = cmd[update:1000] echo "$(date +"%-I:%M")"
-  color = rgba(0,0,0,0.8)
-  font_size = 180
+  color = rgba(13, 18, 50, 1)
+  font_size = 85
   font_family = steelfish outline regular
-  position = 80, -120
+  position = 300, 130
   halign = left
-  valign = center
+  valign = bottom
 }
 
-# Desktop Environment
+# Desktop Environment: Shows hyprland logo----------------------------------------------------------------------------------------
 image {
     monitor =
     path = /home/mv/randomshit/Untitled8_20241018020746.png
     size = 75
     border_size = 0
     border_color = $foreground
-    position = -50, 50
-    halign = right
-    valign = bottom
+    position = 50, -50
+    halign = left
+    valign = top
     rounding=0
 }
 
-# CURRENT SONG
+# CURRENT SONG-----------------------------------------------------------------------------------------------------------------------
+# SONG NAME
 label {
       monitor =
       text = cmd[update:1000] echo "$(/home/mv/whatsong.sh)"  
-      font_size = 20
-      font_family = JetBrains Mono
+      font_size = 25
+      font_family = SF Pro Bold
       color = rgba(48, 44, 62, 1)
-      position = 80, 180 # Shifted position to the right side
+      position = 300, 80 # Shifted position to the right side
       halign = left      # Aligns the label to the right
       valign = bottom
     }
-
-
+#ARTIST NAME
 label {
-    monitor =
-    text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/whoami.sh)"
-    color = $foreground
-    font_size = 14
-    font_family = JetBrains Mono
-    position = 0, -10
-    halign = center
-    valign = top
+      monitor =
+      text = cmd[update:1000] echo "$(/home/mv/artist.sh)"  
+      font_size = 15
+      font_family = SF Pro Display
+      color = rgba(48, 44, 62, 1)
+      position = 300, 50 # Shifted position to the right side
+      halign = left      # Aligns the label to the right
+      valign = bottom
+    }
+# ALBUM ART
+image {
+    monitor = 
+    size = 224 # lesser side if not 1:1 ratio
+    rounding = 15 # negative values mean circle
+    border_size = 0
+    rotate = 0 # degrees, counter-clockwise
+    reload_time = 2
+    reload_cmd = ~/.config/hypr/scripts/art.sh
+    position = 40, 40
+    halign = left
+    valign = bottom
+    opacity = 1
 }
-
+# BATTERY AND NETWORK STATUS--------------------------------------------------------------------------------------------------------
 label {
     monitor =
     text = cmd[update:1000] echo "$(/home/justin/Documents/Scripts/battery.sh)"
@@ -101,43 +137,18 @@ label {
     halign = right
     valign = top
 }
-input-field {
-    monitor =
-    size = 300, 60
-    outline_thickness = 3
-    dots_size = 0.2
-    dots_spacing = 0.35
-    dots_center = true
-    outer_color = rgba(255,255,255,1)
-    inner_color = rgba(105,109,151,0.7)
-    font_color = #23535f
-    fade_on_empty = true       # Fade input field when empty
-    rounding = 0.05
-    border_size = 3 
-    border_color = #23535f
-    check_color = rgb(204, 136, 34)
-    placeholder_text = <span foreground="#cdd6f4" font_family="JetBrains Mono">Input Password</span>
-    hide_input = false
-    position = 0, 0            # Centered position
-    halign = center
-    valign = center
-    shadow_passes = 1
-    shadow_size = 2
-}
 # Profile Picture
-#image {
+# image {
 #     monitor =
-#    path = /home/mv/randomshit/miku3-removebg-preview.png
-#    size = 300
-#    border_size = 0
- #   border_color = $foreground
- #   position = -80, -40
- #   halign = right
- #   valign = center
- #   rounding=20
-  #  shadow_color = rgba(0, 0, 0, 0.5)  # Shadow color with transparency
-#    shadow_passes=1                  # Blur radius for the shadow
- #   shadow_size = 1              # Horizontal and vertical offset
-#}
-
-
+#     path = /home/mv/randomshit/miku3-removebg-preview.png
+#     size = 300
+#     border_size = 0
+#     border_color = $foreground
+#     position = -80, -40
+#     halign = right
+#     valign = center
+#     rounding = 20
+#     shadow_color = rgba(0, 0, 0, 0.5)  # Shadow color with transparency
+#     shadow_passes = 1                  # Blur radius for the shadow
+#     shadow_size = 1                    # Horizontal and vertical offset
+# }
