--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,29 +1,26 @@
-#Setup monitors
-# See https://wiki.hyprland.org/Configuring/Monitors/
+#Setting up the monitors eDP-1 is the inbnuilt one and DP-1 is the external one
+#1980x1080@60 hertz is self explanatory and 1920x0, 1.0 is the scaling.
 monitor=eDP-1,1920x1080@60Hz,1920x0,1.0 # scale of 1.0
 
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-exec-once=obsidian #opens obsidian on start up
+# Make sure that the name of the window matches with what youre writing here. 
+# ex spotify will now work but Spotify will be working properly
+$BROWSER = zen-twilight
+#Startup files, all these are automatically opened on startup
+exec-once = sudo adb start-server
+exec-once = kitty
+exec-once = obsidian
+exec-once = $BROWSER
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar && swaync
-exec-once = hyprpaper
+exec-once = agsv1
 exec-once = systemctl --user start hyprpolkitagent
-# Source a file (multi-file configs)
+exec-once = wal -i /home/mv/randomshit/clitloli.png
 # source = ~/.config/hypr/myColors.conf
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+# (Memesta): Ive left this untouched and its better if you do the same
 input {
     kb_layout = us
     kb_variant =
@@ -32,66 +29,52 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
+#natural scroll means that if youre used to scrolling up on windows or anywhere else it goes like that but if if the option is disabled it goes ulta
     touchpad {
         natural_scroll = yes #no
     }
-
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+#This will change the borders and how they look.
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    gaps_in = 1 #5
+    gaps_in = 2 #5
     gaps_out = 5 #20
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(164, 138, 218, 1) 45deg
-    #col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
-    col.inactive_border = rgba(595959aa)
-
+    col.active_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1) -45deg
+    col.active_border=rgb(cdd6f4) #this was uncommented and the other was commented
+    col.inactive_border = rgba(255, 255, 255, 1) rgba(210, 156, 254, 1) -45deg
     layout = dwindle
 }
 
+#No idea what this does so google it lol
 misc {
     disable_hyprland_logo = no #yes
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 15
-    
     blur { 
         enabled = true
-        size = 3 #7
+        size = 7 #7
         passes = 2 #3
     }
 
-    drop_shadow = yes
-    shadow_range = 4 #4
-    shadow_render_power = 5 #3
-    col.shadow = rgba(1a1a1aee)
 }
 
+#This is got it form r/unixporn and some i changed it to default
  animations {
     enabled = yes
     bezier = linear, 0.0, 0.0, 1.0, 1.0
     bezier = mvBezier, 0.05, 0.9, 0.1, 1.05 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    
     bezier = overshot, 0.05, 0.9, 0.1, 1.1
-
     bezier = cubic, 0.54, 0.22, 0.07, 0.74
-
     bezier = overshotCircle, 0.175, 0.885, 0.32, 1.275
-
     bezier = md3_standard, 0.2, 0.0, 0, 1.0
-
     bezier= bounce, 1, 1.6, 0.1, 0.85
-
     bezier = decel, 0.05, 0.7, 0.1, 1
-
     animation = windowsIn, 1, 3, cubic
     animation = windowsOut, 1, 7, bounce, slide
     animation = windows, 1, 2, md3_standard, slide
@@ -100,9 +83,6 @@ decoration {
     animation = fade, 1, 1, default
     animation = workspaces, 1, 4, decel, slidefadevert
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-#   
-
     #animation = windows, 1, 7, linear,overshot
 #    animation = windowsOut, 1, 7, default, popin 80%
  #   animation = border, 1, 10, default
@@ -144,29 +124,47 @@ windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
 windowrulev2 = opacity 0.8 0.8,class:^(spotify)$
 windowrulev2 = opacity 1.0 0.8,class:^(Code)$
 windowrulev2 = opacity 1.0 0.8,class:^(obsidian)$
+windowrulev2 = opacity 1.0 0.8, class:^(discord)$
+windowrulev2 = opacity 0.9 0.8, class:^(thunar)$
 
+# This is like bnding an app to a particular workspace
+windowrule = workspace 10, ^obsidian$ #This will put obsidian in workspace 10
+windowrule = workspace 9, ^Spotify$
+windowrule = workspace 8, ^discord$
+windowrule = workspace 2, ^$BROWSER$
+windowrule = workspace 3, ^Code$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty  #open the terminal
 bind = $mainMod, C, killactive, # close the active window
 bind = $mainMod, L, exec, hyprlock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
-bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, thunar # Show the graphical file browser
-bind = $mainMod, V, togglefloating, # Allow a window to float
+bind = $mainMod, R, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, S, exec, hyprshot -m region # take a screenshot
 bind = $mainMod, O, exec, obsidian  #open obsidian
+bind = $mainMod, X, exec, hyprpicker -a
+bind = $mainMod, N, exec, swaync-client -t -sw
+bind = $mainMod, S, exec, hyprshot -m output
+# APP BINDS
+bind = $mainMod, Q, exec, kitty #open the terminal
+bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, F, exec, firefox  #open firefox
 bind = $mainMod, B, exec, brave  #open brave
 bind = $mainMod, Y, exec, spotify
-bind = $mainMod, X, exec, hyprpicker -a
+bind = $mainMod, Z, exec,zen-twilight
+bind = $mainMod, Z, exec,zen-browser
+bind = $mainMod, V, exec, code
 bind = $mainMod, D, exec, discord
-bind = $mainMod, N, exec, swaync-client -t -sw
+
+# SHIFT BINDS
+bind = $mainMod SHIFT, S, exec, hyprshot -m region # take a screenshot
+bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = $mainMod SHIFT, N, exec, playerctl next # Play the next scrolling
+bind = $mainMod SHIFT, P, exec, playerctl previous # Play the previous song
+bind = $mainMod SHIFT, SPACE, exec, playerctl play-pause # Play or pause the song
 
 # ROG G15 Strix (2021) Specific binds
 bind = ,156, exec, rog-control-center # ASUS Armory crate key
