--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/randomshit/shizuku.png
-wallpaper = eDP-1,~/randomshit/shizuku.png
+preload = ~/randomshit/citlali.png
+wallpaper = eDP-1,/home/mv/randomshit/citlali.png
